# calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  calc.c  calc.h  calc_internal.h  main.c  parser.py
